Update: hackerllama/sentence_embedding2/index.ipynb

--- a/hackerllama/sentence_embedding2/index.ipynb
+++ b/hackerllama/sentence_embedding2/index.ipynb
@@ -859,17 +859,17 @@
     "\n",
     "双向编码器在获取有关 RLHF 的结果时表现不错，但对于获取好的，精确的关于什么是 RLHF 的响应却很困难。我看了每个模型的前 5 个结果。通过查看段落，17387 和 20638 是唯一真正回答了问题的段落。尽管三个模型中 17387 的排名都更高，但有趣的是双向编码器的 20638 的排名很低，而其他两个交叉编码器的排名都更高。你可以在下面找到这些内容:\n",
     "\n",
-    "| 语料库 ID \t| 相关文本和总结                                                            \t| 双向编码器位置 (前 10) \t| MSMarco 位置   \t| BGE 位置   \t|\n",
-    "|———–\t|——————————————————————————————\t|——————————\t|———––\t|———\t|\n",
-    "| 14679     \t| Discusses implications and applications of RLHF but no definition.                       \t| 1                            \t| 20           \t| 4       \t|\n",
-    "| 17387     \t| Describes the process of RLHF in detail and applications                                 \t| 2                            \t| 2           \t| 3       \t|\n",
-    "| 39564     \t| This chunk is messy and is more of a discussion section intro than an answer             \t| 3                            \t| 18           \t| 6       \t|\n",
-    "| 14725     \t| Characteristics about RLHF but no definition of what it is                              \t| 4                            \t| 11           \t| 8       \t|\n",
-    "| 20638     \t| “increasingly popular technique for reducing harmful behaviors in large language models” \t| 10                           \t| 1           \t| 2       \t|\n",
-    "| 5628      \t| Discusses the reward modeling (a component) but does not define RLHF                     \t| 5                            \t| 3           \t| 16       \t|\n",
-    "| 14815     \t| Discusses RLHF but does not define it                                                    \t| 24                            \t| 4           \t| 1       \t|\n",
-    "| 14749     \t| Discusses impact of RLHF but it has no definition                                        \t| 19                            \t| 5           \t| 15       \t|\n",
-    "| 9761      \t| Discusses the reward modeling (a component) but does not define RLHF                     \t| 7                            \t| 7           \t| 5       \t|"
+    "| 语料库 ID | 相关文本和总结                                                            | 双向编码器位置 (前 10) | MSMarco 位置   | BGE 位置   |\n",
+    "|---|---|---|---|---|\n",
+    "| 14679     | Discusses implications and applications of RLHF but no definition.                       | 1                            | 20           | 4       |\n",
+    "| 17387     | Describes the process of RLHF in detail and applications                                 | 2                            | 2           | 3       |\n",
+    "| 39564     | This chunk is messy and is more of a discussion section intro than an answer             | 3                            | 18           | 6       |\n",
+    "| 14725     | Characteristics about RLHF but no definition of what it is                              | 4                            | 11           | 8       |\n",
+    "| 20638     | “increasingly popular technique for reducing harmful behaviors in large language models” | 10                           | 1           | 2       |\n",
+    "| 5628      | Discusses the reward modeling (a component) but does not define RLHF                     | 5                            | 3           | 16       |\n",
+    "| 14815     | Discusses RLHF but does not define it                                                    | 24                            | 4           | 1       |\n",
+    "| 14749     | Discusses impact of RLHF but it has no definition                                        | 19                            | 5           | 15       |\n",
+    "| 9761      | Discusses the reward modeling (a component) but does not define RLHF                     | 7                            | 7           | 5       |"
    ]
   },
   {
